# stockflow

./: .dockerignore  .gitignore  README.MD  docker-compose.yml  kaggle_auth.json  pyproject.toml
data/processed/stock_reports/: StockReport_2016-07.csv  StockReport_2016-08.csv
docker/: api.Dockerfile  worker.Dockerfile
src/stockflow/api/: main.py
src/stockflow/api/controllers/: automation_controller.py  stock_controller.py
src/stockflow/api/models/: stock.py  stock_schema.py
src/stockflow/api/service/: automation_service.py  stock_service.py
src/stockflow/api/views/dtos/: stock_dto.py
src/stockflow/api/views/routes/: stock_routes.py
src/stockflow/automation/download/: auth.py  kaggle_downloader.py
src/stockflow/automation/process/: extract_pdf.py  pipeline.py
src/stockflow/config/: database.py  settings.py
