[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stockflow"
version = "0.1.0"
description = "Automação e pipelines do Stockflow"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings",
    "playwright",
    "python-dotenv"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
